feat: refactor CommentProcessorFactory to simplify readability
Improve code readability in CommentProcessorFactory by extracting parent element checks into their own methods. Also, streamline parts of the code to make it more concise and coherent. Minor changes were made in related classes and unit tests as part of this refactoring effort.